@@ -1,5 +1,5 @@
 ; Script generated by the Inno Setup Script Wizard.
-; $Id: GMTsetup_basic.iss,v 1.5 2008-04-28 02:20:51 guru Exp $
+; $Id: GMTsetup_basic.iss,v 1.6 2008-04-30 21:06:13 guru Exp $
 ; Creates Windows Setup file for the Basic GMT installation (no h/f coastlines, no PDF)
 
 [Setup]
@@ -14,7 +14,7 @@ AllowNoIcons=yes
 UsePreviousAppDir=yes
 LicenseFile=c:\GMT\guru\gpl.txt
 InfoAfterFile=c:\GMT\guru\GMT_postinstall_message.txt
-OutputBaseFilename=GMT4.3.0_basic
+OutputBaseFilename=GMT4.3.0_basic_install
 MinVersion=0,4.0.1381
 OutputDir=c:\GMT\ftp
 
