@@ -1,5 +1,5 @@
 ; Script generated by the Inno Setup Script Wizard.
-; $Id: GMTsetup_hfcoast.iss,v 1.2 2008-04-26 04:34:47 guru Exp $
+; $Id: GMTsetup_hfcoast.iss,v 1.3 2008-04-30 21:06:13 guru Exp $
 ; Creates Setup file for the optional h/f coastlines
 ; SEE THE DOCUMENTATION FOR DETAILS ON CREATING INNO SETUP SCRIPT FILES!
 
@@ -14,7 +14,7 @@ DefaultGroupName=GMT
 AllowNoIcons=true
 Compression=bzip
 LicenseFile=c:\GMT\guru\gpl.txt
-OutputBaseFilename=GSHHS1.10_highfull
+OutputBaseFilename=GSHHS1.10_highfull_install
 MinVersion=0,4.0.1381
 OutputDir=c:\GMT\ftp
 
