@@ -1,5 +1,5 @@
 ; Script generated by the Inno Setup Script Wizard.
-; $Id: GMTsetup_pdf.iss,v 1.3 2008-04-26 05:58:12 guru Exp $
+; $Id: GMTsetup_pdf.iss,v 1.4 2008-04-30 21:06:13 guru Exp $
 ; Creates Setup file for the GMT PDF documentation only
 ; SEE THE DOCUMENTATION FOR DETAILS ON CREATING INNO SETUP SCRIPT FILES!
 
@@ -14,7 +14,7 @@ DefaultDirName={sd}\programs\GMT
 DefaultGroupName=GMT
 AllowNoIcons=true
 LicenseFile=c:\GMT\guru\gpl.txt
-OutputBaseFilename=GMT4.3.0_pdf
+OutputBaseFilename=GMT4.3.0_pdf_install
 MinVersion=0,4.0.1381
 OutputDir=c:\GMT\ftp
 
