@@ -1,5 +1,8 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.271 2008-04-30 01:32:56 guru Exp $
+	$Id: ChangeLog,v 1.272 2008-04-30 21:10:21 guru Exp $
+-----------------------------------------------------------------------------------------
+2008-05-01
+	* tar 4.3.0 made and released via email
 -----------------------------------------------------------------------------------------
 2008-04-29	pwessel
 	* grdview.c:		Clarified that -T cannot take -JZ|z, fixed clipping.
